--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
 <script src="https://kit.fontawesome.com/546ae89db3.js" crossorigin="anonymous"></script>
 
-    <title>React App</title>
+    <title>Model Cars - Shop for Luxury and Super car models. </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
